juno/qa/apps/portal-ui-release-cqdg-611/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portal-ui-release-cqdg-611
  name: portal-ui-release-cqdg-611
spec:
  replicas: 2
  selector:
    matchLabels:
      app: portal-ui-release-cqdg-611
  template:
    metadata:
      labels:
        app: portal-ui-release-cqdg-611
    spec:
      imagePullSecrets:
      - name: images-pull
      containers:
      - image: index.docker.io/ferlabcrsj/cqdg-portal-ui:feature-cqdg-611-6b18ce4-1708714210 # {"$imagepolicy": "cqdg-qa-fluxcd:portal-ui-release-cqdg-611"}
        name: portal-ui-release-cqdg-611
        resources:
          requests:
            memory: "256Mi"
            cpu: '0.50'
          limits:
            memory: "512Mi"
            cpu: '1.00'
